Changes

from version 1.0.0 to 1.1.0

improvements:
- when a SIX measurement is running, the application icon changes to green
  to indicate this

bugfix:
- don't show hints how th change name for disabled pumps and valves


from version 0.999.1 to 1.0.0

improvements:
- on connecting to a SIX ask for a sensor definition file if not is yet loaded
- add buttons to connect to a pump driver and SIX so that the corresponding
  menu entries are now optional methods to connect
- when appending to existing data files, it is checked if the currently loaded
  definition file is the same than used for the data file
- on closing the program, ask the user when action is running if he really wants to
- the last shown channels in the chart are stored for the next program start

bugfix:
- when disconnecting from a SIX, empty the current temperature display


from version 0.999 to 0.999.1

improvement:
- on closing the program, ask the user when connected to a SIX if he really wants to

bugfixes:
- when changing if temperature correction is performed, all values in the chart
  must be recalculated 
- when appending sensor data the time span between the last sensor data
  and now is respected


from version 0.998 to 0.999

improvements:
- new File menu to open sensor data files
- sensor data files can be dragged into the sensor data diagram to be opened
- allow to specify the number of last measurement that will be used to
  calculate the mean value that used for the calibration
- allow to set that not on every cycle a calibration is performed
- when selecting an existing sensor data file after connecting to the SIX
  the new sensor data will be appended to that file -> measurements can be resumed
- when connection to the SIX is lost, the software tries to reconnect automatically
- it is now possible to perform automated calibrations without connected pumps
- the number of pumps in the setup can be specified
- SIX with current range of 250 and 500 nA are supported